' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml Entity

package typeorm {
  class "@Entity" as Entity
  hide Entity circle
  class "@Column" as Column
  hide Column circle
  class "@PrimaryColumn" as PrimaryColumn
  hide PrimaryColumn circle
  class "@OneToMany" as OneToMany
  hide OneToMany circle
  class "@JoinColumn" as JoinColumn
  hide JoinColumn circle
  class "@ManyToOne" as ManyToOne
  hide ManyToOne circle
  class "@CreateDateColumn" as CreateDateColumn
  hide CreateDateColumn circle
  class "@UpdateDateColumn" as UpdateDateColumn
  hide UpdateDateColumn circle
}

package lied.entity {
  class "type LiedArt = 'CD' | 'MP3'" as LiedArt
  hide LiedArt circle

  class Lied <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: number
    @Column() readonly titel: string
    @Column() readonly rating: number
    @Column() readonly art: LiedArt
    @Column() readonly datum: Date
    @Column() readonly kuenstler: Kuenstler
    @CreateDateColumn() readonly erzeugt: Date
    @UpdateDateColumn() readonly aktualisiert: Date
  }

  class Kuenstler <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: number
    @Column() readonly name: string
    @ManyToOne() readonly lied: Lied
  }

  class Schlagwort <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: string
    @Column() readonly schlagwort: string
    @ManyToOne() readonly lied: Lied
  }

  Lied ..> Entity
  Lied *--> "*" Kuenstler : @OneToMany() schlagwoerter
  Lied *--> "*" Schlagwort : @OneToMany() schlagwoerter
  Lied .up.> LiedArt
}

hide empty members

footer (c) Jürgen Zimmermann

@enduml
